# mau

./: Cargo.toml  README.md
examples/: complete.rs
mau-i18n/: Cargo.toml
mau-i18n-macros/: Cargo.toml
mau-i18n-macros/src/: common.rs  error.rs  from_language.rs  lib.rs  translate_enum.rs
mau-i18n/src/: error.rs  format.rs  from_language.rs  language.rs  lib.rs  map.rs  translate_enum.rs
mau-renderer/: Cargo.toml
mau-renderer-opengl/: Cargo.toml
mau-renderer-opengl/src/: common.rs  error.rs  font.rs  framebuffer.rs  image.rs  lib.rs  rect_packer.rs  rendering.rs  shape_buffer.rs
mau-renderer/src/: lib.rs
mau-ui/: Cargo.toml
mau-ui/src/: input.rs  lib.rs  render.rs
src/: app.rs  clipboard.rs  config.rs  error.rs  i18n.rs  lib.rs  ui.rs
