[package]
name = "mau"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "mau-i18n",
    "mau-i18n-macros",
    "mau-renderer",
    "mau-renderer-opengl",
    "mau-ui",
]

[features]
default = ["renderer-opengl"]
renderer-opengl = ["mau-ui/opengl"]

[dependencies]

native-dialog = "0.6.3"
log = "0.4.17"
paws = "0.3.3"
serde = { version = "1.0.143", features = ["derive"] }
directories = "4.0.1"
toml = "0.5.9"
thiserror = "1.0.32"
sys-locale = "0.2.1"
once_cell = "1.13.0"
arboard = "2.1.1"
image = { version = "0.24.3", default-features = false }

mau-i18n = { path = "mau-i18n" }
mau-ui = { path = "mau-ui" }
