[package]
name = "mau-renderer-opengl"
version = "0.1.0"
edition = "2021"

[dependencies]
winit = { version = "0.26.1", features = ["serde"] }
glutin = "0.28.0"
glow = "0.11.0"
memoffset = "0.6.4"
freetype-rs = "0.28.0"
smallvec = { version = "1.7.0", features = ["const_generics"] }
glam = "0.19.0"
thiserror = "1.0.32"

mau-renderer = { path = "../mau-renderer" }
